<resources>
    <string name="app_name">Suite Payment</string>
    <!-- Google ID -->
    <string name="google_id">AIzaSyAtUPbogUbGn2ABaj6gtZyuUoMb1oG-IIQ</string>

    <string name="action_login">Ingresar</string>
    <string name="action_register">Registrarse</string>
    <string name="action_settings">Configuración</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_next">Siguiente</string>
    <string name="action_enter">Ingresar</string>
    <string name="welcome">Bienvenido</string>
    <string name="registry_data">Registro</string>
    <string name="email">Correo electrónico</string>
    <string name="salary">Salario:</string>
    <string name="group">Grupo</string>
    <string name="employee_info">Datos Empleado</string>
    <string name="clasifier">Clasificadores</string>
    <string name="spending_type">Tipo de Gasto</string>
    <string name="description_hint">Escribir Gasto.</string>
    <string name="message">Mensaje!</string>
    <string name="amount_text">Monto</string>
    <string name="period">Gestión</string>
    <string name="month">Mes</string>
    <string name="worker">Trabajador</string>
    <string name="worker_hint">Escribir Nombre Empleado.</string>
    <string name="address_hint">Escribir Direccion.</string>
    <string name="amount_hint">Escribir Monto.</string>
    <string name="icon_empleado">&#xf2b9; </string>
    <string name="icon_pagos">&#xf0d6;</string>
    <string name="icon_empleado3">&#xf1ae;</string>
    <string name="icon_empleado2">&#xf2bd;</string>
    <string name="icon_gastos">&#xf09d;</string>
    <string name="icon_clasificadores">&#xf00b;</string>
    <string name="icon_clientes">&#xf0c0;</string>
    <string name="icon_configuracion">&#xf1c0;</string>
    <string name="icon_reporte">&#xf080;</string>
    <string name="pagar">Pagar</string>
    <string name="pagado">Pagado</string>
    <string name="salary_example">2000</string>
    <string name="password">Código de Acceso</string>
    <string name="name">Nombre Completo:</string>
    <string name="name_search">Nombre Completo</string>
    <string name="edit">Editar</string>
    <string name="backup_base">Backup Base de Datos</string>
    <string name="ci">Carnet de identidad</string>
    <string name="search">Buscar</string>
    <string name="select">Seleccione</string>
    <string name="select_year">Selecciona una Gestión</string>
    <string name="generate">Generar</string>
    <string name="title_generate">Generar Planilla</string>
    <string name="title_spend">Reporte de Gastos</string>
    <string name="title_payment_history">Historial de Pagos</string>
    <string name="title_payment_report">Reporte de Pagos</string>
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="menu_productlocal">Venta</string>
    <string name="menu_agregarpedidos">Agregar Pedidos</string>
    <string name="sending_order">Enviando Pedido.</string>
    <string name="size_text">36dp</string>
    <string name="detail_order">Detalle Pedido</string>
    <string name="empleados">Empleados</string>
    <string name="empleado">Empleado</string>
    <string name="list_empleados">Lista de Empleados</string>
    <string name="list_reports">Lista de Reportes</string>
    <string name="pagos">Pagos</string>
    <string name="gastos">Gastos</string>
    <string name="configuracion">Configuración</string>
    <string name="sale_product">Vender</string>
    <string name="date">Fecha:</string>
    <string name="date_title">Fecha</string>
    <string name="resume">Resumen</string>
    <string name="loading">Cargando</string>
    <string name="write_description">Escribir Descripción.</string>
    <string name="synchronizing">Sincronizando</string>
    <string name="details">Detalles</string>
    <string name="new_order">Nuevo Pedido</string>
    <string name="order">Pedido</string>
    <string name="orders">Pedidos</string>
    <string name="active_orders">Pedidos Activos</string>
    <string name="avr_ped_cod">Cod. Ped</string>
    <string name="update">Actualizar</string>
    <string name="profile">Perfil</string>
    <string name="order_number">Nro. Pedido</string>
    <string name="state">Estado</string>
    <string name="status_cancel">Cancelado</string>
    <string name="status_pending">Pendiente</string>
    <string name="status_inprocess">En Proceso</string>
    <string name="status_success">Entregado</string>
    <string name="currency">Bs.</string>
    <string name="products">Productos</string>
    <string name="contact">Contacto</string>
    <string name="faq">Preguntas Frecuentes</string>
    <string name="notifications">Notificaciones</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="total">Total:</string>
    <string name="call_customer">Llamar</string>
    <string name="address_between">Entre</string>
    <string name="address_reference">Referencia</string>
    <string name="customer_info">Datos Cliente</string>
    <string name="activity_maps_title">Mapas</string>
    <string name="message_no_conexion">Sin conexión a Internet.</string>
    <string name="message_save">Guardado Correctamente.!</string>
    <string name="quantity">Cant.:</string>
    <string name="unitprice">P/U:</string>
    <string name="save">Guardar</string>
    <string name="give">Entregar</string>
    <string name="location">Ubicación</string>
    <string name="description">Descripción</string>
    <string name="description_sample">Nro. Mesa #3</string>
    <string name="distance">Distancia</string>
    <string name="distance_abbreviation">Dist.</string>
    <string name="address_abbreviation">Direc.</string>
    <string name="time">Tiempo</string>
    <string name="time_abbreviation">Hrs.</string>
    <string name="give_order">Entregar Pedido</string>
    <string name="next">Siguiente</string>
    <string name="cancel">Cancelar</string>
    <string name="sale_points">Puntos de Venta</string>
    <string name="question_cancel_order">Está seguro de cancelar el pedido?</string>
    <string name="question_confirm_product">Está seguro de agregar este producto al pedido?</string>
    <string name="yes">Si</string>
    <string name="pick_address">Dirección para la entrega</string>
    <string name="pick_date">Seleccionar Fecha</string>
    <string name="accept">Aceptar</string>
    <string name="tipo">Tipo</string>
    <string name="customer">Cliente:</string>
    <string name="order_saved">Su pedido ha sido recibido, Muchas gracias!!!</string>
    <string name="order_no_saved">Su pedido no ha podido ser enviado, intente nuevamente!!!</string>
    <string name="quit_sure">Esta seguro de cerrar sesión?</string>
    <string name="city">Ciudad</string>
    <string name="phone">Telefono:</string>
    <string name="cellphone">Telefono movil</string>
    <string name="registry">Registrar</string>
    <string name="valor_cero">0.00</string>
    <string name="address">Direccion:</string>
    <string name="payment_date">Fecha de Pago:</string>
    <string name="category">Categoria</string>
    <string name="enter">Ingresar</string>
    <string name="price">Precio:</string>
    <string name="payment_type">Tipo de Pago:</string>
    <string name="synchronize">Sincronizar</string>
    <string name="place">Lugar:</string>
    <string name="void_order">Anular</string>
    <string name="no">No</string>
    <string name="saldo">Saldo</string>
    <string name="saldo_mes">Saldo - Mes</string>
    <string name="printer_mac">MAC Address de Impresora</string>
    <string name="question_exit">Esta seguro de salir de la Aplicación?</string>
    <string name="question_backup">Desea crear un backup de la aplicación?</string>
    <string name="question_generate_salary">Desea crear un registro de planilla para todos los empleados</string>
    <string name="question_view_payment">Desea ver el detalle de pagos?</string>
    <string name="question_payment">Desea pagar a los empleados de este mes?</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_syncronize">Syncronize</string>
    <string name="device_list">Lista de Dispositivos</string>
    <string name="registries">Registros</string>
    <string name="add">Nuevo</string>
    <string name="device_name">Nombre</string>
    <string name="device_mac">Mac Address</string>
    <string name="configuration_private_service">Servicio Interno (WI-FI)</string>
    <string name="configuration_public_service">Servicio Público (Internet)</string>
    <string name="configuration_update_app">Actualizacion Aplicación</string>
    <string name="ok">Continuar</string>
    <string name="customers">Clientes</string>
    <string name="close_sesion">Cerrar Sesión</string>
    <string name="menu_customers">Clientes</string>
    <string name="menu_order">Pedido</string>
    <string name="menu_sale">Venta</string>
    <string name="menu_op">OP</string>
    <string name="menu_distribution">Distribución</string>
    <string name="menu_options">Opciones</string>
    <string name="menu_customers_news">Nuevos Clientes</string>
    <string name="menu_template_customer">Clientes Temporales</string>
    <string name="menu_configuration">Configuración</string>
    <string name="menu_sync_begin">Iniciar Dia</string>
    <string name="menu_sync_end">Cerrar Dia</string>
    <string name="menu_sync_info">Informacion Sincronización</string>
    <string name="menu_report">Reportes</string>
    <string name="menu_title">Menu</string>
    <string name="name_sample">Escribir Nombre.</string>
    <string name="corporate_name">Razón Social</string>
    <string name="nit">Nit</string>
    <string name="nit_sample">3211234561</string>
    <string name="phone_sample">3554294</string>
    <string name="phone_int_sample">105</string>
    <string name="phone_mobile">Celular</string>
    <string name="phone_mobil_sample">79933151</string>
    <string name="latitud">Latitud</string>
    <string name="cero_double">0.00</string>
    <string name="longitud">Longitud</string>
    <string name="footer_text">https://www.facebook.com/megasystem.com.bo/</string>
    <string-array name="PaymentTypes">
        <item>Contado</item>
        <item>Credito</item>
    </string-array>
    <string name="code">Codigo</string>
    <string name="customer_name">Nombre Completo</string>
    <string name="add_customer">Nuevo Cliente</string>
    <string name="del_customer">Eliminar Cliente</string>
    <string name="edit_customer">Editar Cliente</string>
    <string name="title_activity_configuration">Configuration</string>
    <string name="message_backup_finish">Backup Creado</string>
    <string name="message_no_backup">Backup No Creado</string>
    <string name="cliente">Cliente</string>
    <string name="list_clientes">Lista de Clientes</string>
    <string name="clientes">Clientes</string>
    <string name="anticipo">Anticipo</string>
    <string name="venta">Ventas</string>
    <string name="icon_venta"><![CDATA[&#xf155;]]></string>
    <string name="cobros">Cobros</string>
    <string name="cobrar">Cobrar</string>
    <string name="anular">Anular</string>
    <string name="list_ventas">Listado de Ventas</string>
    <string name="question_anulate">Desea anular el registro?</string>
    <string name="destino">Destino</string>
    <string name="activar">Habilitar/Deshabilitar</string>
    <string name="question_activate_employee">Desea habilitar o deshabilitar al empleado</string>
    <string name="cero">0</string>
    <string name="ver_pagos">Ver Pagos</string>
    <string name="list_pagos">Listado de Pagos</string>
    <string name="total_header">Total</string>
    <string name="bono">Agregar Bono</string>
</resources>
