<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"

            android:layout_alignParentTop="true"
            android:orientation="vertical">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:weightSum="1">

            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/name"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

            <EditText
                    android:id="@+id/etName"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ems="10"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:hint="@string/name_sample"
                    android:inputType="textCapCharacters"/>

        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:weightSum="1">
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:text="@string/address"/>

            <EditText
                    android:id="@+id/etDireccion"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ems="10"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:hint="@string/address_hint"
                    android:inputType="textCapCharacters"/>

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:weightSum="1">
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:text="@string/phone"/>

            <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ems="10"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:hint="@string/address_between"
                    android:inputType="textCapCharacters" android:text="@string/phone_mobil_sample"/>

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:weightSum="1">
            <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:text="@string/salary"/>

            <EditText
                    android:id="@+id/etSalary"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:ems="10"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:hint="@string/address_reference"
                    android:inputType="numberDecimal" android:text="@string/salary_example"/>

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:weightSum="1">

        </TableRow>


    </LinearLayout>

    <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:baselineAligned="true"
            android:focusable="false"
            android:focusableInTouchMode="false"

            android:weightSum="1" android:layout_alignParentBottom="true">

        <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/status_cancel"
                android:layout_weight="0.5"
                android:text="@string/cancel"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>

        <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/status_inprocess"
                android:layout_weight="0.5"
                android:text="@string/save"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
    </TableRow>


</RelativeLayout>
